--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,16 +4,16 @@
     <item
             android:id="@+id/navigation_home"
             android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/title_running"/>
+            android:title="@string/title_home"/>
 
     <item
-            android:id="@+id/navigation_lifting"
+            android:id="@+id/navigation_dashboard"
             android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="@string/title_lifting"/>
+            android:title="@string/title_dashboard"/>
 
     <item
-            android:id="@+id/navigation_friends"
+            android:id="@+id/navigation_notifications"
             android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="@string/title_friends"/>
+            android:title="@string/title_notifications"/>
 
 </menu>
